# 3D-Renderer

./: CMakeLists.txt  README.md
include/rasterizer/: display.h  mesh.h  triangle.h  vector.h
src/: display.c  display.h  main.c  mesh.c  mesh.h  triangle.h  vector.h
src/core/: main.c  mesh.c  triangle.c  vector.c
src/rendering/: display.c
test/: test_vector.c
